--- a/FirstApp/app/src/main/AndroidManifest.xml
+++ b/FirstApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tek.bootstrap.chuck.firstapp" >
+    package="com.tek.bootstrap.chuck.firstapp">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -9,28 +9,36 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="ANIMAL FINDER"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FirstApp"
-        android:usesCleartextTraffic="true" >
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".MapsActivity"
+            android:name=".Upload_image"
             android:exported="false" />
-        <activity
-            android:name=".ui.UserFragment.UserProf"
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.package.name.fileprovider"
             android:exported="false"
-            android:label="@string/title_activity_user_prof"
-            android:theme="@style/Theme.FirstApp.NoActionBar" />
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
-            android:name=".UserProfileAct"
+            android:name=".bottomNavFragments.MapsActivity"
             android:exported="false"
-            android:label="@string/title_activity_user_profile"
-            android:theme="@style/Theme.FirstApp.NoActionBar" />
+            android:parentActivityName=".MainActivity"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -41,25 +49,23 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyDMJrVlMO5_YfGDmtZUJBCji6i9YA6CA8w" />
 
         <activity
-            android:name=".LogIn"
+            android:name=".registration.SignUp"
             android:exported="true"
-            android:theme="@style/Theme.Design.Light.NoActionBar" />
+            android:parentActivityName=".MainActivity">
+        </activity>
         <activity
-            android:name=".SignUp"
-            android:exported="true"
-            android:theme="@style/Theme.Design.Light.NoActionBar" >
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
+
     </application>
 
 </manifest>
