--- a/FirstApp/app/build.gradle
+++ b/FirstApp/app/build.gradle
@@ -56,10 +56,17 @@ dependencies {
     // retrofit2 /app/build.gradle dependencies
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     //recycler
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     //cardview
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    implementation "androidx.room:room-runtime:2.4.1"
+    annotationProcessor "androidx.room:room-compiler:2.4.1"
+
+    //picass
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
 
