--- a/FirstApp/app/src/main/AndroidManifest.xml
+++ b/FirstApp/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.FirstApp"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".UploadImageUser"
+            android:exported="false" />
+        <activity
             android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
@@ -63,11 +66,10 @@
         <activity
             android:name=".registration.SignUp"
             android:exported="true"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
